@@ -6,6 +6,7 @@ RECENT CHANGES
 1.83.0
 ======
 
+* Added --skip-config option to prohibit loading of external config files.
 * #251 Improve db:info with prefix and machine-readable output (by Melvyn Sopacua)
 * #255 ConfigurationLoader::loadPluginConfig() Bug? (Thanks to Cyrill Schumacher)
 * Updated dependencies (PHPUnit, Composer, Twig, JUnit-XML)
